More error checking in the polling function - hopefully the last needed.
- Updated the Playback image.

--- a/MiniSpotify/MiniSpotify/MainWindow.xaml
+++ b/MiniSpotify/MiniSpotify/MainWindow.xaml
@@ -7,9 +7,9 @@
         mc:Ignorable="d"
         Title="Mini-Viewer" Height="137" Width="644">
     <Grid Background="#FF343434">
-        <Button Name="btn2" 
+        <Button Name="PlaybackButton" 
         BorderBrush="Black" BorderThickness="0" 
-        Click="OnClickPlayPause" ClickMode="Press" HorizontalAlignment="Right" Width="86" Height="33" VerticalAlignment="Top" Margin="0,30,10,0">
+        Click="OnClickPlayPause" ClickMode="Press" HorizontalAlignment="Right" Width="86" Height="86" VerticalAlignment="Top" Margin="0,10,10,0">
             <Button.Background>
                 <ImageBrush ImageSource="Assets/Images/PlayButton.png" Stretch="Uniform"/>
             </Button.Background>
