--- a/MiniSpotify/MiniSpotify/MainWindow.xaml
+++ b/MiniSpotify/MiniSpotify/MainWindow.xaml
@@ -14,5 +14,27 @@
                 <ImageBrush ImageSource="Assets/Images/PlayButton.png" Stretch="Uniform"/>
             </Button.Background>
         </Button>
+        <Button Name="NextSongButton"
+        BorderBrush="Black" BorderThickness="0" 
+        Click="OnClickNextSong" ClickMode="Press" HorizontalAlignment="Right" Width="86" Height="86" VerticalAlignment="Top" Margin="0,10,121,0">
+            <Button.Background>
+                <ImageBrush ImageSource="Assets/Images/NextSongButton.png" Stretch="Uniform"/>
+            </Button.Background>
+        </Button>
+        <Button Name="PreviousSongButton"
+        BorderBrush="Black" BorderThickness="0" 
+        Click="OnClickPreviousSong" ClickMode="Press" HorizontalAlignment="Right" Width="86" Height="86" VerticalAlignment="Top" Margin="0,10,230,0" RenderTransformOrigin="0.5,0.5">
+            <Button.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="-180"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Button.RenderTransform>
+            <Button.Background>
+                <ImageBrush ImageSource="Assets/Images/NextSongButton.png" Stretch="Uniform"/>
+            </Button.Background>
+        </Button>
     </Grid>
 </Window>
