--- a/MiniSpotify/MiniSpotify/MainWindow.xaml
+++ b/MiniSpotify/MiniSpotify/MainWindow.xaml
@@ -5,25 +5,27 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MiniSpotify"
         mc:Ignorable="d"
-        Title="Mini-Viewer" Height="137" Width="644">
-    <Grid Background="#FF343434">
+        Title="Mini-Viewer" Height="130" Width="405" ResizeMode="NoResize">
+    <Grid Background="#232322" Height="100" Width="400">
+        <Image Name="AlbumArtworkImage" Width="75" Height ="75" HorizontalAlignment="Left" Margin="12,0,0,12"/>
+        <Button Name="ProgressBar" Width="400" Height="10" Margin="0,90,0,0" Background="#5b5b5b"/>
         <Button Name="PlaybackButton" 
         BorderBrush="Black" BorderThickness="0" 
-        Click="OnClickPlayPause" ClickMode="Press" HorizontalAlignment="Right" Width="86" Height="86" VerticalAlignment="Top" Margin="0,10,10,0">
+        Click="OnClickPlayPause" ClickMode="Press" HorizontalAlignment="Right" Width="86" Height="86" VerticalAlignment="Top" Margin="0,0,10,0">
             <Button.Background>
                 <ImageBrush ImageSource="Assets/Images/PlayButton.png" Stretch="Uniform"/>
             </Button.Background>
         </Button>
         <Button Name="NextSongButton"
         BorderBrush="Black" BorderThickness="0" 
-        Click="OnClickNextSong" ClickMode="Press" HorizontalAlignment="Right" Width="86" Height="86" VerticalAlignment="Top" Margin="0,10,121,0">
+        Click="OnClickNextSong" ClickMode="Press" HorizontalAlignment="Right" Width="86" Height="86" VerticalAlignment="Top" Margin="0,0,121,0">
             <Button.Background>
                 <ImageBrush ImageSource="Assets/Images/NextSongButton.png" Stretch="Uniform"/>
             </Button.Background>
         </Button>
         <Button Name="PreviousSongButton"
         BorderBrush="Black" BorderThickness="0" 
-        Click="OnClickPreviousSong" ClickMode="Press" HorizontalAlignment="Right" Width="86" Height="86" VerticalAlignment="Top" Margin="0,10,230,0" RenderTransformOrigin="0.5,0.5">
+        Click="OnClickPreviousSong" ClickMode="Press" HorizontalAlignment="Right" Width="86" Height="86" VerticalAlignment="Top" Margin="0,0,230,0" RenderTransformOrigin="0.5,0.5">
             <Button.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
