--- a/MiniSpotify/MiniSpotify/MainWindow.xaml
+++ b/MiniSpotify/MiniSpotify/MainWindow.xaml
@@ -5,17 +5,17 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MiniSpotify"
         mc:Ignorable="d"
-        Title="Mini-Viewer" Height="130" Width="405" ResizeMode="NoResize">
+        Title="Mini-Viewer" Height="130" Width="405" ResizeMode="NoResize" Topmost="True">
     <Grid Background="#232322" Height="100" Width="400">
         <Image Name="AlbumArtworkImage" Width="75" Height ="75" HorizontalAlignment="Left" Margin="12,0,0,12" Stretch="Fill">
             <Image.Source>
-                <BitmapImage UriSource="Assets/Design/muse.jpg"/>
+                <BitmapImage UriSource=""/>
             </Image.Source>
             <Image.OpacityMask>
                 <ImageBrush ImageSource="Assets/Design/muse.jpg" Stretch="UniformToFill"/>
             </Image.OpacityMask>
         </Image>
-        <TextBlock Name="TitleText" Margin="92,6,10,74" FontFamily="Lato" FontSize="18">Lato Regular 18pt Title</TextBlock>
+        <TextBlock Name="TitleText" Margin="92,6,10,74" FontFamily="Lato" FontSize="18" Foreground="White"></TextBlock>
         <Button Name="ProgressBar" Width="400" Height="10" Margin="0,90,0,0" Background="#5b5b5b"/>
         <Button Name="PlaybackButton" 
         BorderBrush="Black" BorderThickness="0" 
@@ -53,6 +53,6 @@
                 <ImageBrush ImageSource="Assets/Images/Icons/pause-icon.png" Stretch="Uniform"/>
             </Button.Background>
         </Button>
-        <TextBlock Name="ArtistText" Margin="92,26,10,54" FontFamily="Lato Light" FontSize="14"><Run Text="Lato Light 14pt Artist"/></TextBlock>
+        <TextBlock Name="ArtistText" Margin="92,26,10,54" FontFamily="Lato Light" Foreground="White" FontSize="14"><Run Text=""/></TextBlock>
     </Grid>
 </Window>
