--- a/MiniSpotify/MiniSpotify/MainWindow.xaml
+++ b/MiniSpotify/MiniSpotify/MainWindow.xaml
@@ -7,13 +7,10 @@
         mc:Ignorable="d"
         Title="Mini-Viewer" Height="130" Width="405" ResizeMode="NoResize" Topmost="True">
     <Grid Background="#232322" Height="100" Width="400">
-        <Image Name="AlbumArtworkImage" Width="75" Height ="75" HorizontalAlignment="Left" Margin="12,0,0,12" Stretch="Fill">
+        <Image Name="AlbumArtworkImage" Width="75" Height ="75" HorizontalAlignment="Left" Margin="12,0,0,12" Stretch="Fill" OpacityMask="{x:Null}">
             <Image.Source>
                 <BitmapImage UriSource=""/>
             </Image.Source>
-            <Image.OpacityMask>
-                <ImageBrush ImageSource="Assets/Design/muse.jpg" Stretch="UniformToFill"/>
-            </Image.OpacityMask>
         </Image>
         <TextBlock Name="TitleText" Margin="92,6,10,74" FontFamily="Lato" FontSize="18" Foreground="White"></TextBlock>
         <Button Name="ProgressBar" Width="400" Height="10" Margin="0,90,0,0" Background="#5b5b5b"/>
