--- a/MiniSpotify/MiniSpotify/MainWindow.xaml
+++ b/MiniSpotify/MiniSpotify/MainWindow.xaml
@@ -30,7 +30,7 @@
                 </Image.Source>
             </Image>
             <TextBlock Name="TitleText" Margin="92,0,10,61" FontFamily="Lato" FontSize="18" Foreground="White"></TextBlock>
-            <Button Name="ProgressBar" Width="400" Height="10" Margin="0,71,0,0" Background="#5b5b5b"/>
+            <ProgressBar Name="SongProgress" Value="0" Width="400" Height="10" Margin="0,72.5,0,0" Background="#5b5b5b" Foreground="#e2d647" BorderThickness="0"/>
             <Button Name="PlaybackButton" 
         BorderBrush="Black" BorderThickness="0" 
         Click="OnClickPlayPause" ClickMode="Press" HorizontalAlignment="Right" Width="9" Height="15" VerticalAlignment="Top" Margin="0,51,149,0">
