Added a pin icon, and made it functional.
* Need a nicer icon.

--- a/MiniSpotify/MiniSpotify/MainWindow.xaml
+++ b/MiniSpotify/MiniSpotify/MainWindow.xaml
@@ -33,7 +33,21 @@
                 BorderThickness="0"
                 Margin="0,2,2,0"
                 HorizontalAlignment="Right">
-                
+            </Button>
+            <Button Name="PinToTopButton"
+                Click="OnClickPinButton"
+                DockPanel.Dock="Right"
+                Content=""
+                Foreground="White"
+                FontFamily="Segoe MDL2 Assets"
+                BorderThickness="0"
+                Margin="0,2,2,0"
+                HorizontalAlignment="Right"
+                    Width="15">
+                <Button.Background>
+                    <ImageBrush ImageSource="Assets/Images/Icons/pin-icon.png"/>
+                </Button.Background>
+
             </Button>
         </DockPanel>
 
