--- a/MiniSpotify/MiniSpotify/MainWindow.xaml
+++ b/MiniSpotify/MiniSpotify/MainWindow.xaml
@@ -96,7 +96,7 @@
             <TextBlock Name="ArtistText" Margin="92,20,15,42" FontFamily="Lato Light" Foreground="White" FontSize="14"></TextBlock>
             <Button x:Name="EditorButton" 
                 BorderBrush="Black" BorderThickness="0" 
-                Click="OnClickEditorButton" ClickMode="Press" HorizontalAlignment="Right" Width="5" Height="15" VerticalAlignment="Top" Margin="0,29,5,0">
+                Click="OnClickEditorButton" ClickMode="Press" HorizontalAlignment="Right" Width="5" Height="15" VerticalAlignment="Top" Margin="0,29,5,0" RenderTransformOrigin="0.5,0.5">
                 <Button.Background>
                     <ImageBrush ImageSource="Assets/Images/Icons/play-icon.png" Stretch="Uniform"/>
                 </Button.Background>
