Changes to the pin button, where we change the colour of it based on status.

--- a/MiniSpotify/MiniSpotify/EditorWindow.xaml
+++ b/MiniSpotify/MiniSpotify/EditorWindow.xaml
@@ -9,6 +9,10 @@
         ResizeMode="NoResize" Topmost="True" BorderBrush="#232322" 
         Background="#232322" FontFamily="Lato" WindowStyle="None">
     <Grid>
-        
+        <Button Name="ColourWheelPicker">
+            <Button.Background>
+                <ImageBrush/>
+            </Button.Background>
+        </Button>
     </Grid>
 </Window>
