--- a/MiniSpotify/MiniSpotify/MainWindow.xaml
+++ b/MiniSpotify/MiniSpotify/MainWindow.xaml
@@ -63,6 +63,13 @@
                     <ImageBrush ImageSource="Assets/Images/Icons/unliked-icon.png" Stretch="Uniform"/>
                 </Button.Background>
             </Button>
+            <Button Name="UnlikeSongButton" IsEnabled="False" Visibility="Hidden" 
+        BorderBrush="Black" BorderThickness="0" 
+        Click="OnClickLike" ClickMode="Press" HorizontalAlignment="Right" Width="16" Height="15" VerticalAlignment="Top" Margin="0,60,281,0">
+                <Button.Background>
+                    <ImageBrush ImageSource="Assets/Images/Icons/liked-icon.png" Stretch="Uniform"/>
+                </Button.Background>
+            </Button>
             <Button Name="PlaybackButton" 
         BorderBrush="Black" BorderThickness="0" 
         Click="OnClickPlayPause" ClickMode="Press" HorizontalAlignment="Right" Width="9" Height="15" VerticalAlignment="Top" Margin="0,60,131,0">
